# zephyr-vscode-template

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.adoc  conanfile.txt  zephyr-template.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
firmware/: CMakeLists.txt  Kconfig  west.yml
firmware/components/: CMakeLists.txt  Kconfig
firmware/components/foo/: CMakeLists.txt  Kconfig
firmware/components/foo/include/foo/: hello.hpp
firmware/components/foo/src/: hello.cpp
firmware/components/foo/tests/: CMakeLists.txt  Kconfig
firmware/components/foo/tests/src/: FooTests.cpp
firmware/targets/app/: CMakeLists.txt  prj.conf
firmware/targets/app/src/: main.cpp
firmware/targets/app_tests/: CMakeLists.txt  prj.conf
firmware/targets/app_tests/src/: main.cpp
firmware/zephyr/: module.yml
scripts/: conan-install.sh
